# refscan

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/refscan/: __init__.py  bib.py  cite.py  claims.py  cli.py  color.py  doctor.py  fetch.py  fix.py  layout.py  overlap.py  progress.py  refstats.py  release.py  report.py  sanity.py  scan.py  semantic.py  textproc.py  track.py  verify.py
tests/: test_bib.py  test_check.py  test_cite.py  test_claims.py  test_color.py  test_doctor.py  test_fetch.py  test_fix.py  test_integration_layout.py  test_layout.py  test_overlap.py  test_progress.py  test_refstats.py  test_release.py  test_report.py  test_sanity.py  test_scan.py  test_semantic.py  test_textproc.py  test_track.py  test_verify.py
