[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refscan"
version = "0.10.0"
description = "Reference-PDF collection and paper-vs-references plagiarism scanning for research papers"
authors = [{ name = "Ramakrishna Tipireddy", email = "rktreddy@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []  # stdlib only; pdftotext (poppler) is a runtime system dep

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
refscan = "refscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/refscan"]

[tool.ruff]
line-length = 100
target-version = "py310"
